5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3999/executions/1671_1105.log
== TEST (2019-04-24 00:26:43) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x=input()
print("Entrada:",x)
if(x=="lobo"):
	y="Stark"
elif(x=="leao"):
	y="Lannister"
elif(x=="veado"):
	y="Baratheon"
elif(x=="dragao"):
	y="Targaryen"
elif(x=="rosa"):
	y="Tyrell"
elif(x=="sol"):
	y="Martell"
elif(x=="lula"):
	y="Greyjoy"
elif(x=="esfolado"):
	y="Bolton"
elif(x=="turta"):
	y="Tully"
print("Casa:",y)
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 00:26:55) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x=input()
print("Entrada:",x)
if(x=="lobo"):
	y="Stark"
elif(x=="leao"):
	y="Lannister"
elif(x=="veado"):
	y="Baratheon"
elif(x=="dragao"):
	y="Targaryen"
elif(x=="rosa"):
	y="Tyrell"
elif(x=="sol"):
	y="Martell"
elif(x=="lula"):
	y="Greyjoy"
elif(x=="esfolado"):
	y="Bolton"
elif(x=="turta"):
	y="Tully"
print("Casa:",y)
-- EXECUTION TIME:
0.241832
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 00:27:12) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x=input()
print("Entrada:",x)
if(x=="lobo"):
	y="Stark"
elif(x=="leao"):
	y="Lannister"
elif(x=="veado"):
	y="Baratheon"
elif(x=="dragao"):
	y="Targaryen"
elif(x=="rosa"):
	y="Tyrell"
elif(x=="sol"):
	y="Martell"
elif(x=="lula"):
	y="Greyjoy"
elif(x=="esfolado"):
	y="Bolton"
elif(x=="turta"):
	y="Tully"
print("Casa:",y)
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 00:34:16) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x=input()
print("Entrada:",x)
if(x=="lobo"):
	y="Stark"
elif(x=="leao"):
	y="Lannister"
elif(x=="veado"):
	y="Baratheon"
elif(x=="dragao"):
	y="Targaryen"
elif(x=="rosa"):
	y="Tyrell"
elif(x=="sol"):
	y="Martell"
elif(x=="lula"):
	y="Greyjoy"
elif(x=="esfolado"):
	y="Bolton"
elif(x=="turta"):
	y="Tully"
else:
	if(x!="lobo")and(x!="leao")and(x!="veado")and(x!="dragao")and(x!="rosa")and(x!="sol")and(x!="lula")and(x!="esfolado")and(x!="turta"):
		y="Brasao invalido"
print("Casa:",y)

-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 00:34:32) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x=input()
print("Entrada:",x)
if(x=="lobo"):
	y="Stark"
elif(x=="leao"):
	y="Lannister"
elif(x=="veado"):
	y="Baratheon"
elif(x=="dragao"):
	y="Targaryen"
elif(x=="rosa"):
	y="Tyrell"
elif(x=="sol"):
	y="Martell"
elif(x=="lula"):
	y="Greyjoy"
elif(x=="esfolado"):
	y="Bolton"
elif(x=="turta"):
	y="Tully"
else:
	if(x!="lobo")and(x!="leao")and(x!="veado")and(x!="dragao")and(x!="rosa")and(x!="sol")and(x!="lula")and(x!="esfolado")and(x!="turta"):
		y="Brasao invalido"
print("Casa:",y)

-- EXECUTION TIME:
0.194575
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Casa: Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 00:34:47) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x=input()
print("Entrada:",x)
if(x=="lobo"):
	y="Stark"
elif(x=="leao"):
	y="Lannister"
elif(x=="veado"):
	y="Baratheon"
elif(x=="dragao"):
	y="Targaryen"
elif(x=="rosa"):
	y="Tyrell"
elif(x=="sol"):
	y="Martell"
elif(x=="lula"):
	y="Greyjoy"
elif(x=="esfolado"):
	y="Bolton"
elif(x=="turta"):
	y="Tully"
elif(x!="lobo")and(x!="leao")and(x!="veado")and(x!="dragao")and(x!="rosa")and(x!="sol")and(x!="lula")and(x!="esfolado")and(x!="turta"):
		y="Brasao invalido"
print("Casa:",y)

-- EXECUTION TIME:
0.190763
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Casa: Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 00:35:28) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x=input()
print("Entrada:",x)
if(x=="lobo"):
	y="Stark"
elif(x=="leao"):
	y="Lannister"
elif(x=="veado"):
	y="Baratheon"
elif(x=="dragao"):
	y="Targaryen"
elif(x=="rosa"):
	y="Tyrell"
elif(x=="sol"):
	y="Martell"
elif(x=="lula"):
	y="Greyjoy"
elif(x=="esfolado"):
	y="Bolton"
elif(x=="turta"):
	y="Tully"
elif(x!="lobo")or(x!="leao")or(x!="veado")or(x!="dragao")or(x!="rosa")or(x!="sol")or(x!="lula")or(x!="esfolado")or(x!="turta"):
		y="Brasao invalido"
print("Casa:",y)

-- EXECUTION TIME:
0.123929
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Casa: Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 00:37:19) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x=input()
print("Entrada:",x)
if(x=="lobo"):
	y="Stark"
elif(x=="leao"):
	y="Lannister"
elif(x=="veado"):
	y="Baratheon"
elif(x=="dragao"):
	y="Targaryen"
elif(x=="rosa"):
	y="Tyrell"
elif(x=="sol"):
	y="Martell"
elif(x=="lula"):
	y="Greyjoy"
elif(x=="esfolado"):
	y="Bolton"
elif(x=="turta"):
	y="Tully"
elif(x!="lobo")or(x!="leao")or(x!="veado")or(x!="dragao")or(x!="rosa")or(x!="sol")or(x!="lula")or(x!="esfolado")or(x!="turta"):
		y="Brasao invalido"
print("Casa:",y)

-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 00:37:30) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x=input()
print("Entrada:",x)
if(x=="lobo"):
	y="Stark"
elif(x=="leao"):
	y="Lannister"
elif(x=="veado"):
	y="Baratheon"
elif(x=="dragao"):
	y="Targaryen"
elif(x=="rosa"):
	y="Tyrell"
elif(x=="sol"):
	y="Martell"
elif(x=="lula"):
	y="Greyjoy"
elif(x=="esfolado"):
	y="Bolton"
elif(x=="turta"):
	y="Tully"
elif(x!="lobo")or(x!="leao")or(x!="veado")or(x!="dragao")or(x!="rosa")or(x!="sol")or(x!="lula")or(x!="esfolado")or(x!="turta"):
		y="Brasao invalido"
print("Casa:",y)

-- EXECUTION TIME:
0.140067
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Casa: Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 00:38:29) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x=input()
print("Entrada:",x)
if(x=="lobo"):
	Y="Stark"
elif(x=="leao"):
	Y="Lannister"
elif(x=="veado"):
	Y="Baratheon"
elif(x=="dragao"):
	Y="Targaryen"
elif(x=="rosa"):
	Y="Tyrell"
elif(x=="sol"):
	Y="Martell"
elif(x=="lula"):
	Y="Greyjoy"
elif(x=="esfolado"):
	Y="Bolton"
elif(x=="turta"):
	Y="Tully"
elif(x!="lobo")or(x!="leao")or(x!="veado")or(x!="dragao")or(x!="rosa")or(x!="sol")or(x!="lula")or(x!="esfolado")or(x!="turta"):
		Y="Brasao invalido"
print("Casa:",Y)

-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 00:38:42) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x=input()
print("Entrada:",x)
if(x=="lobo"):
	Y="Stark"
elif(x=="leao"):
	Y="Lannister"
elif(x=="veado"):
	Y="Baratheon"
elif(x=="dragao"):
	Y="Targaryen"
elif(x=="rosa"):
	Y="Tyrell"
elif(x=="sol"):
	Y="Martell"
elif(x=="lula"):
	Y="Greyjoy"
elif(x=="esfolado"):
	Y="Bolton"
elif(x=="turta"):
	Y="Tully"
elif(x!="lobo")or(x!="leao")or(x!="veado")or(x!="dragao")or(x!="rosa")or(x!="sol")or(x!="lula")or(x!="esfolado")or(x!="turta"):
		Y="Brasao invalido"
print("Casa:",Y)

-- EXECUTION TIME:
0.161437
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Casa: Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 00:39:53) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
X=input()
print("Entrada:",X)
if(X=="lobo"):
	Y="Stark"
elif(X=="leao"):
	Y="Lannister"
elif(X=="veado"):
	Y="Baratheon"
elif(X=="dragao"):
	Y="Targaryen"
elif(X=="rosa"):
	Y="Tyrell"
elif(X=="sol"):
	Y="Martell"
elif(X=="lula"):
	Y="Greyjoy"
elif(X=="esfolado"):
	Y="Bolton"
elif(X=="turta"):
	Y="Tully"
elif(X!="lobo")or(X!="leao")or(X!="veado")or(X!="dragao")or(X!="rosa")or(X!="sol")or(X!="lula")or(X!="esfolado")or(X!="turta"):
		Y="Brasao invalido"
print("Casa:",Y)

-- EXECUTION TIME:
0.192228
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Casa: Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 00:39:56) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
X=input()
print("Entrada:",X)
if(X=="lobo"):
	Y="Stark"
elif(X=="leao"):
	Y="Lannister"
elif(X=="veado"):
	Y="Baratheon"
elif(X=="dragao"):
	Y="Targaryen"
elif(X=="rosa"):
	Y="Tyrell"
elif(X=="sol"):
	Y="Martell"
elif(X=="lula"):
	Y="Greyjoy"
elif(X=="esfolado"):
	Y="Bolton"
elif(X=="turta"):
	Y="Tully"
elif(X!="lobo")or(X!="leao")or(X!="veado")or(X!="dragao")or(X!="rosa")or(X!="sol")or(X!="lula")or(X!="esfolado")or(X!="turta"):
		Y="Brasao invalido"
print("Casa:",Y)

-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 00:40:13) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
X=input()
print("Entrada:",X)
if(X=="lobo"):
	Y="Stark"
elif(X=="leao"):
	Y="Lannister"
elif(X=="veado"):
	Y="Baratheon"
elif(X=="dragao"):
	Y="Targaryen"
elif(X=="rosa"):
	Y="Tyrell"
elif(X=="sol"):
	Y="Martell"
elif(X=="lula"):
	Y="Greyjoy"
elif(X=="esfolado"):
	Y="Bolton"
elif(X=="turta"):
	Y="Tully"
elif(X!="lobo")or(X!="leao")or(X!="veado")or(X!="dragao")or(X!="rosa")or(X!="sol")or(X!="lula")or(X!="esfolado")or(X!="turta"):
		Y="Brasao invalido"
print("Casa:",Y)

-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 00:43:07) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
X=input()
print("Entrada:",X)
if(X=="lobo"):
	Y="Stark"
elif(X=="leao"):
	Y="Lannister"
elif(X=="veado"):
	Y="Baratheon"
elif(X=="dragao"):
	Y="Targaryen"
elif(X=="rosa"):
	Y="Tyrell"
elif(X=="sol"):
	Y="Martell"
elif(X=="lula"):
	Y="Greyjoy"
elif(X=="esfolado"):
	Y="Bolton"
elif(X=="turta"):
	Y="Tully"
elif(X!="lobo")or(X!="leao")or(X!="veado")or(X!="dragao")or(X!="rosa")or(X!="sol")or(X!="lula")or(X!="esfolado")or(X!="turta"):
		Y="Brasao invalido"
print("Casa:",Y)

-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 00:43:14) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
X=input()
print("Entrada:",X)
if(X=="lobo"):
	Y="Stark"
elif(X=="leao"):
	Y="Lannister"
elif(X=="veado"):
	Y="Baratheon"
elif(X=="dragao"):
	Y="Targaryen"
elif(X=="rosa"):
	Y="Tyrell"
elif(X=="sol"):
	Y="Martell"
elif(X=="lula"):
	Y="Greyjoy"
elif(X=="esfolado"):
	Y="Bolton"
elif(X=="turta"):
	Y="Tully"
elif(X!="lobo")or(X!="leao")or(X!="veado")or(X!="dragao")or(X!="rosa")or(X!="sol")or(X!="lula")or(X!="esfolado")or(X!="turta"):
		Y="Brasao invalido"
print("Casa:",Y)

-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 00:43:22) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
X=input()
print("Entrada:",X)
if(X=="lobo"):
	Y="Stark"
elif(X=="leao"):
	Y="Lannister"
elif(X=="veado"):
	Y="Baratheon"
elif(X=="dragao"):
	Y="Targaryen"
elif(X=="rosa"):
	Y="Tyrell"
elif(X=="sol"):
	Y="Martell"
elif(X=="lula"):
	Y="Greyjoy"
elif(X=="esfolado"):
	Y="Bolton"
elif(X=="turta"):
	Y="Tully"
elif(X!="lobo")or(X!="leao")or(X!="veado")or(X!="dragao")or(X!="rosa")or(X!="sol")or(X!="lula")or(X!="esfolado")or(X!="turta"):
		Y="Brasao invalido"
print("Casa:",Y)

-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 00:44:02) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
X=input()
print("Entrada:",X)
if(X=="lobo"):
	Y="Stark"
elif(X=="leao"):
	Y="Lannister"
elif(X=="veado"):
	Y="Baratheon"
elif(X=="dragao"):
	Y="Targaryen"
elif(X=="rosa"):
	Y="Tyrell"
elif(X=="sol"):
	Y="Martell"
elif(X=="lula"):
	Y="Greyjoy"
elif(X=="esfolado"):
	Y="Bolton"
elif(X=="turta"):
	Y="Tully"
elif(X!="lobo")or(X!="leao")or(X!="veado")or(X!="dragao")or(X!="rosa")or(X!="sol")or(X!="lula")or(X!="esfolado")or(X!="turta"):
		Y="Brasao invalido"
print("Casa:",Y)

-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 12:24:34) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
X=input()
print("Entrada:",X)
if(X=="lobo"):
	Y="Stark"
elif(X=="leao"):
	Y="Lannister"
elif(X=="veado"):
	Y="Baratheon"
elif(X=="dragao"):
	Y="Targaryen"
elif(X=="rosa"):
	Y="Tyrell"
elif(X=="sol"):
	Y="Martell"
elif(X=="lula"):
	Y="Greyjoy"
elif(X=="esfolado"):
	Y="Bolton"
elif(X=="turta"):
	Y="Tully"
elif(X!="lobo")or(X!="leao")or(X!="veado")or(X!="dragao")or(X!="rosa")or(X!="sol")or(X!="lula")or(X!="esfolado")or(X!="turta"):
		Y="Brasao invalido"
print("Casa:",Y)

-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 12:24:46) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
X=input()
print("Entrada:",X)
if(X=="lobo"):
	Y="Stark"
elif(X=="leao"):
	Y="Lannister"
elif(X=="veado"):
	Y="Baratheon"
elif(X=="dragao"):
	Y="Targaryen"
elif(X=="rosa"):
	Y="Tyrell"
elif(X=="sol"):
	Y="Martell"
elif(X=="lula"):
	Y="Greyjoy"
elif(X=="esfolado"):
	Y="Bolton"
elif(X=="turta"):
	Y="Tully"
elif(X!="lobo")or(X!="leao")or(X!="veado")or(X!="dragao")or(X!="rosa")or(X!="sol")or(X!="lula")or(X!="esfolado")or(X!="turta"):
		Y="Brasao invalido"
print("Casa:",Y)

-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 12:24:54) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
X=input()
print("Entrada:",X)
if(X=="lobo"):
	Y="Stark"
elif(X=="leao"):
	Y="Lannister"
elif(X=="veado"):
	Y="Baratheon"
elif(X=="dragao"):
	Y="Targaryen"
elif(X=="rosa"):
	Y="Tyrell"
elif(X=="sol"):
	Y="Martell"
elif(X=="lula"):
	Y="Greyjoy"
elif(X=="esfolado"):
	Y="Bolton"
elif(X=="turta"):
	Y="Tully"
elif(X!="lobo")or(X!="leao")or(X!="veado")or(X!="dragao")or(X!="rosa")or(X!="sol")or(X!="lula")or(X!="esfolado")or(X!="turta"):
		Y="Brasao invalido"
print("Casa:",Y)

-- EXECUTION TIME:
0.255567
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Casa: Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 12:25:11) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
X=input()
print("Entrada:",X)
if(X=="lobo"):
	Y="Stark"
elif(X=="leao"):
	Y="Lannister"
elif(X=="veado"):
	Y="Baratheon"
elif(X=="dragao"):
	Y="Targaryen"
elif(X=="rosa"):
	Y="Tyrell"
elif(X=="sol"):
	Y="Martell"
elif(X=="lula"):
	Y="Greyjoy"
elif(X=="esfolado"):
	Y="Bolton"
elif(X=="turta"):
	Y="Tully"
else:
	(X!="lobo")or(X!="leao")or(X!="veado")or(X!="dragao")or(X!="rosa")or(X!="sol")or(X!="lula")or(X!="esfolado")or(X!="turta"):
		Y="Brasao invalido"
print("Casa:",Y)

-- EXECUTION TIME:
0.152052
-- ERROR:
  File "/home/codebench/codes/1671/1105/main.py", line 24
    (X!="lobo")or(X!="leao")or(X!="veado")or(X!="dragao")or(X!="rosa")or(X!="sol")or(X!="lula")or(X!="esfolado")or(X!="turta"):
                                                                                                                              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 12:25:36) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
X=input()
print("Entrada:",X)
if(X=="lobo"):
	Y="Stark"
elif(X=="leao"):
	Y="Lannister"
elif(X=="veado"):
	Y="Baratheon"
elif(X=="dragao"):
	Y="Targaryen"
elif(X=="rosa"):
	Y="Tyrell"
elif(X=="sol"):
	Y="Martell"
elif(X=="lula"):
	Y="Greyjoy"
elif(X=="esfolado"):
	Y="Bolton"
elif(X=="turta"):
	Y="Tully"
else:
	(X!="lobo")or(X!="leao")or(X!="veado")or(X!="dragao")or(X!="rosa")or(X!="sol")or(X!="lula")or(X!="esfolado")or(X!="turta"):
		Y="Brasao invalido"
print("Casa:",Y)

-- ERROR:
File "XXXX", line 24
    (X!="lobo")or(X!="leao")or(X!="veado")or(X!="dragao")or(X!="rosa")or(X!="sol")or(X!="lula")or(X!="esfolado")or(X!="turta"):
                                                                                                                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 12:25:41) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
X=input()
print("Entrada:",X)
if(X=="lobo"):
	Y="Stark"
elif(X=="leao"):
	Y="Lannister"
elif(X=="veado"):
	Y="Baratheon"
elif(X=="dragao"):
	Y="Targaryen"
elif(X=="rosa"):
	Y="Tyrell"
elif(X=="sol"):
	Y="Martell"
elif(X=="lula"):
	Y="Greyjoy"
elif(X=="esfolado"):
	Y="Bolton"
elif(X=="turta"):
	Y="Tully"
else:
	(X!="lobo")or(X!="leao")or(X!="veado")or(X!="dragao")or(X!="rosa")or(X!="sol")or(X!="lula")or(X!="esfolado")or(X!="turta"):
		Y="Brasao invalido"
print("Casa:",Y)

-- ERROR:
File "XXXX", line 24
    (X!="lobo")or(X!="leao")or(X!="veado")or(X!="dragao")or(X!="rosa")or(X!="sol")or(X!="lula")or(X!="esfolado")or(X!="turta"):
                                                                                                                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 12:26:00) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
X=input()
print("Entrada:",X)
if(X=="lobo"):
	Y="Stark"
elif(X=="leao"):
	Y="Lannister"
elif(X=="veado"):
	Y="Baratheon"
elif(X=="dragao"):
	Y="Targaryen"
elif(X=="rosa"):
	Y="Tyrell"
elif(X=="sol"):
	Y="Martell"
elif(X=="lula"):
	Y="Greyjoy"
elif(X=="esfolado"):
	Y="Bolton"
elif(X=="turta"):
	Y="Tully"
elif(X!="lobo")or(X!="leao")or(X!="veado")or(X!="dragao")or(X!="rosa")or(X!="sol")or(X!="lula")or(X!="esfolado")or(X!="turta"):
		Y="Brasao invalido"
print("Casa:",Y)

-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 12:26:59) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
X=input()
print("Entrada:",X)
if(X=="lobo"):
	Y="Stark"
elif(X=="leao"):
	Y="Lannister"
elif(X=="veado"):
	Y="Baratheon"
elif(X=="dragao"):
	Y="Targaryen"
elif(X=="rosa"):
	Y="Tyrell"
elif(X=="sol"):
	Y="Martell"
elif(X=="lula"):
	Y="Greyjoy"
elif(X=="esfolado"):
	Y="Bolton"
elif(X=="turta"):
	Y="Tully"
else:
		Y="Brasao invalido"
print(Y)

-- EXECUTION TIME:
0.274775
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 12:27:01) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
X=input()
print("Entrada:",X)
if(X=="lobo"):
	Y="Stark"
elif(X=="leao"):
	Y="Lannister"
elif(X=="veado"):
	Y="Baratheon"
elif(X=="dragao"):
	Y="Targaryen"
elif(X=="rosa"):
	Y="Tyrell"
elif(X=="sol"):
	Y="Martell"
elif(X=="lula"):
	Y="Greyjoy"
elif(X=="esfolado"):
	Y="Bolton"
elif(X=="turta"):
	Y="Tully"
else:
		Y="Brasao invalido"
print(Y)

-- OUTPUT:
Entrada: lula
Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 12:27:09) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
X=input()
print("Entrada:",X)
if(X=="lobo"):
	Y="Stark"
elif(X=="leao"):
	Y="Lannister"
elif(X=="veado"):
	Y="Baratheon"
elif(X=="dragao"):
	Y="Targaryen"
elif(X=="rosa"):
	Y="Tyrell"
elif(X=="sol"):
	Y="Martell"
elif(X=="lula"):
	Y="Greyjoy"
elif(X=="esfolado"):
	Y="Bolton"
elif(X=="turta"):
	Y="Tully"
else:
		Y="Brasao invalido"
print(Y)

-- OUTPUT:
Entrada: lula
Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 12:27:51) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
X=input()
print("Entrada:",X)
if(X=="lobo"):
	Y="Stark"
elif(X=="leao"):
	Y="Lannister"
elif(X=="veado"):
	Y="Baratheon"
elif(X=="dragao"):
	Y="Targaryen"
elif(X=="rosa"):
	Y="Tyrell"
elif(X=="sol"):
	Y="Martell"
elif(X=="lula"):
	Y="Greyjoy"
elif(X=="esfolado"):
	Y="Bolton"
elif(X=="turta"):
	Y="Tully"
else:
		Y="Brasao invalido"
print(Y)

-- OUTPUT:
Entrada: lula
Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 12:28:43) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
X=input()
print("Entrada:",X)
if(X=="lobo"):
	Y="Stark"
elif(X=="leao"):
	Y="Lannister"
elif(X=="veado"):
	Y="Baratheon"
elif(X=="dragao"):
	Y="Targaryen"
elif(X=="rosa"):
	Y="Tyrell"
elif(X=="sol"):
	Y="Martell"
elif(X=="lula"):
	Y="Greyjoy"
elif(X=="esfolado"):
	Y="Bolton"
elif(X=="turta"):
	Y="Tully"
	print("Casa:",Y)
else:
		Y="Brasao invalido"
print(Y)

-- OUTPUT:
Entrada: lula
Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 12:28:57) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
X=input()
print("Entrada:",X)
if(X=="lobo"):
	Y="Stark"
elif(X=="leao"):
	Y="Lannister"
elif(X=="veado"):
	Y="Baratheon"
elif(X=="dragao"):
	Y="Targaryen"
elif(X=="rosa"):
	Y="Tyrell"
elif(X=="sol"):
	Y="Martell"
elif(X=="lula"):
	Y="Greyjoy"
elif(X=="esfolado"):
	Y="Bolton"
elif(X=="turta"):
	Y="Tully"
print("Casa:",Y)
else:
		Y="Brasao invalido"
print(Y)

-- ERROR:
File "XXXX", line 24
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 12:30:34) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
X=input()
print("Entrada:",X)
if(X=="lobo"):
	Y="Stark"
elif(X=="leao"):
	Y="Lannister"
elif(X=="veado"):
	Y="Baratheon"
elif(X=="dragao"):
	Y="Targaryen"
elif(X=="rosa"):
	Y="Tyrell"
elif(X=="sol"):
	Y="Martell"
elif(X=="lula"):
	Y="Greyjoy"
elif(X=="esfolado"):
	Y="Bolton"
elif(X=="turta"):
	Y="Tully"
else:
	Y="Brasao invalido"

if(Y!="Brasao invalido"):
	print("Casa:",Y)

-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 12:30:54) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
X=input()
print("Entrada:",X)
if(X=="lobo"):
	Y="Stark"
elif(X=="leao"):
	Y="Lannister"
elif(X=="veado"):
	Y="Baratheon"
elif(X=="dragao"):
	Y="Targaryen"
elif(X=="rosa"):
	Y="Tyrell"
elif(X=="sol"):
	Y="Martell"
elif(X=="lula"):
	Y="Greyjoy"
elif(X=="esfolado"):
	Y="Bolton"
elif(X=="turta"):
	Y="Tully"
else:
	Y="Brasao invalido"

if(Y!="Brasao invalido"):
	print("Casa:",Y)
else:
	print(Y)

-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 12:30:59) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
X=input()
print("Entrada:",X)
if(X=="lobo"):
	Y="Stark"
elif(X=="leao"):
	Y="Lannister"
elif(X=="veado"):
	Y="Baratheon"
elif(X=="dragao"):
	Y="Targaryen"
elif(X=="rosa"):
	Y="Tyrell"
elif(X=="sol"):
	Y="Martell"
elif(X=="lula"):
	Y="Greyjoy"
elif(X=="esfolado"):
	Y="Bolton"
elif(X=="turta"):
	Y="Tully"
else:
	Y="Brasao invalido"

if(Y!="Brasao invalido"):
	print("Casa:",Y)
else:
	print(Y)

-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 12:31:05) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
X=input()
print("Entrada:",X)
if(X=="lobo"):
	Y="Stark"
elif(X=="leao"):
	Y="Lannister"
elif(X=="veado"):
	Y="Baratheon"
elif(X=="dragao"):
	Y="Targaryen"
elif(X=="rosa"):
	Y="Tyrell"
elif(X=="sol"):
	Y="Martell"
elif(X=="lula"):
	Y="Greyjoy"
elif(X=="esfolado"):
	Y="Bolton"
elif(X=="turta"):
	Y="Tully"
else:
	Y="Brasao invalido"

if(Y!="Brasao invalido"):
	print("Casa:",Y)
else:
	print(Y)

-- EXECUTION TIME:
0.140235
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
